# diffparc-deps

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: .python-testing.yml.swp  push_container.yml
